--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,3 +2,25 @@
   text-align: center;
 }
 
+#search-bar {
+  display: flex;
+  padding: 30px;
+  gap: 100px;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.search-bar-section {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+#search-select {
+  width: 150px;
+  height: 36px;
+}
+
+#search-id {
+  width: 65px;
+}
